--- a/index.html
+++ b/index.html
@@ -1,11 +1,61 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lion Bank - Главная</title>
 </head>
+
 <body>
-  
+  <div class="wrapper">
+    <header>
+      <div class="logo"></div>
+      <nav>
+        <ul>
+          <li><a href="#">Главная</a></li>
+          <li><a href="#">Услуги</a></li>
+          <li><a href="#">Отзывы</a></li>
+        </ul>
+      </nav>
+      <div class="phone"></div>
+    </header>
+
+    <div class="content">
+      <div class="more"></div>
+      <div class="offers">
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
+      <div class="news-promotions">
+        <div class="slider"></div>
+      </div>
+      <div class="about"></div>
+    </div>
+
+    <footer>
+      <div class="logo"></div>
+      <nav>
+        <ul>
+          <li><a href="#">Главная</a></li>
+          <li><a href="#">Услуги</a></li>
+          <li><a href="#">Отзывы</a></li>
+        </ul>
+      </nav>
+      <div class="social-networks">
+        <ul>
+          <li><a href="#">Telegram</a></li>
+          <li><a href="#">VKontakte</a></li>
+          <li><a href="#">Facebook</a></li>
+          <li><a href="#">Instagran</a></li>
+        </ul>
+      </div>
+      <div class="phone"></div>
+    </footer>
+  </div>
 </body>
+
 </html>
