--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
   <div class="wrapper">
     <header>
-      <div class="logo"></div>
+      <a href="#" class="logo">
+        <img src="" alt="">
+      </a>
       <nav>
         <ul>
           <li><a href="#">Главная</a></li>
@@ -18,26 +20,73 @@
           <li><a href="#">Отзывы</a></li>
         </ul>
       </nav>
-      <div class="phone"></div>
+      <address class="phone">
+        <a href="tel:88007003030">8 800 700 30 30</a>
+        <span>График работы</span>
+      </address>
     </header>
 
     <div class="content">
-      <div class="more"></div>
+      <div class="more">
+        <h1>Не отказывай себе в желании быть первым</h1>
+        <span>Банк с львиным характером</span>
+        <button class="button">Подробнее</button>
+      </div>
       <div class="offers">
+        <h2>Лучшие предложения банка</h2>
         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li>
+            <h3>Карта "Базовая"</h3>
+            
+            <button class="button">Подробнее</button>
+          </li>
+          <li>
+            <h3>Карта "Оптима"</h3>
+
+            <button class="button">Подробнее</button>
+          </li>
+          <li>
+            <h3>Карта "Платинум"</h3>
+
+            <button class="button">Подробнее</button>
+          </li>
         </ul>
       </div>
       <div class="news-promotions">
-        <div class="slider"></div>
+        <h2>Новости и акции</h2>
+        <div class="slider">
+          <ul>
+            <li>
+              <div>
+                <span>ноябрь 2019</span>
+                <h3>Удобное мобильное приложение</h3>
+                <p>Хороший банк, хорошие условия</p>
+              </div>
+            </li>
+            <li>
+              <div>
+                <span>ноябрь 2019</span>
+                <h3>Копите на поездку? Откройте счёт!</h3>
+                <p>Хороший банк, хорошие условия. Откладывайте деньги! Наш банк самый лучший банк в мире!</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </div>
-      <div class="about"></div>
+      <div class="about">
+        <h2>О банке</h2>
+        <p>
+          Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, 
+          а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей.
+        </p>
+        <button class="button">Подробнее</button>
+      </div>
     </div>
 
     <footer>
-      <div class="logo"></div>
+      <a href="#" class="logo">
+        <img src="" alt="">
+      </a>
       <nav>
         <ul>
           <li><a href="#">Главная</a></li>
@@ -53,7 +102,10 @@
           <li><a href="#">Instagran</a></li>
         </ul>
       </div>
-      <div class="phone"></div>
+      <address class="phone">
+        <span>Бесплатный звонок по России</span>
+        <a href="tel:88007003030">8 800 700 30 30</a>
+      </address>
     </footer>
   </div>
 </body>
