--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="#" class="menu__link">Главная</a>
           </li>
           <li class="menu__active-item">
-            <!--СОМНЕНИЯ-->
+            <!--СОМНЕНИЯ: где устанавливать активный класс-->
             <a href="#" class="menu__active-link">Услуги</a>
           </li>
           <li class="menu__item">
@@ -45,10 +45,10 @@
         <h2 class="offers__title">Лучшие предложения банка</h2>
         <ul class="offers__list">
           <li class="offers__item">
-            <!--СОМНЕНИЯ-->
+            <!--СОМНЕНИЯ: правильно ли тут использую БЭМ-->
             <img src="images/icons/cards/card_grey.png" alt="Карта «Базовая»" class="offers__item-image">
             <h3 class="offers__item-title">Карта «Базовая»</h3>
-            <!--СОМНЕНИЯ-->
+            <!--СОМНЕНИЯ: можно ли тут выделить 2 отдельных блока-->
             <div class="service">
               <div class="service__price">60 Р.-</div>
               <div class="service__title">Обслуживание карты</div>
@@ -95,23 +95,25 @@
         <h2 class="news__title">Новости и акции</h2>
         <ul class="news__list">
           <li class="news__item">
+            <!--Картинка ниже, наверное, бэкграунд-->
             <img src="/images/content/news/phone.jpg" alt="Телефон" class="news__item-image">
             <div class="news__item-date">ноябрь 2019</div>
             <h3 class="news__item-name">Удобное мобильное приложение</h3>
             <p class="news__item-description">Хороший банк, хорошие условия</p>
           </li>
           <li class="news__item">
+            <!--Картинка ниже, наверное, бэкграунд-->
             <img src="/images/content/news/mountains.jpg" alt="Горы" class="news__item-image">
             <div class="news__item-date">ноябрь 2019</div>
             <h3 class="news__item-name">Копите на поездку? Откройте счёт!</h3>
-            <p class="news__item-description">Хороший банк, хорошие условия. Откладывайте деньги! Наш банк самый лучший банк
-              в мире!</p>
+            <p class="news__item-description">Хороший банк, хорошие условия. Откладывайте деньги! Наш банк самый лучший банк в мире!</p>
           </li>
         </ul>
         <div class="paginator">
           <div class="paginator__display">Страница 1 из 7</div>
           <ul class="paginator__list">
             <li class="paginator__active-item">
+              <!--СОМНЕНИЯ: где устанавливать активный класс-->
               <a href="#" class="paginator__active-link">1</a>
             </li>
             <li class="paginator__item">
@@ -136,6 +138,7 @@
         </div>
       </div>
       <div class="about">
+        <!--Картинка ниже, наверное, бэкграунд-->
         <img src="images/decor/chess.jpg" alt="Шахматы" class="about__image">
         <h2 class="about__title">О банке</h2>
         <p class="about__description">
@@ -176,6 +179,7 @@
             <a href="#" class="socials__link"><img src="images/icons/socials/vk.png" alt="VKontakte" class="socials__image"></a>
           </li>
           <li class="socials__active-item">
+            <!--СОМНЕНИЯ: где устанавливать активный класс-->
             <a href="#" class="socials__active-link"><img src="images/icons/socials/facebook-hover.png" alt="Facebook" class="socials__image"></a>
           </li>
           <li class="socials__item">
