--- a/index.html
+++ b/index.html
@@ -11,186 +11,198 @@
 <body>
   <div class="wrapper">
     <header class="header">
-      <a href="/" class="logo">
-        <img src="images/logo.png" alt="Логотип" class="logo__pic">
-        <h3 class="logo__title">Lion Bank</h3>
-      </a>
-      <nav class="menu">
-        <ul class="menu__list">
-          <li class="menu__item">
-            <a href="#" class="menu__link">Главная</a>
-          </li>
-          <li class="menu__active-item">
-            <!--СОМНЕНИЯ: где устанавливать активный класс-->
-            <a href="#" class="menu__active-link">Услуги</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">Отзывы</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="contacts">
-        <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
-        <div class="contacts__workhours">График работы</div>
-      </address>
+     <div class="container">
+        <a href="/" class="logo">
+          <img src="images/logo.png" alt="Логотип" class="logo__pic">
+          <h3 class="logo__title">Lion Bank</h3>
+        </a>
+        <nav class="menu">
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#" class="menu__link">Главная</a>
+            </li>
+            <li class="menu__active-item">
+              <!--СОМНЕНИЯ: где устанавливать активный класс-->
+              <a href="#" class="menu__active-link">Услуги</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">Отзывы</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="contacts">
+          <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
+          <div class="contacts__workhours">График работы</div>
+        </address>
+     </div>
     </header>
 
     <div class="page-content">
-      <div class="more">
-        <h1 class="more__title">Не отказывай себе в желании быть первым</h1>
-        <div class="more__description">Банк с львиным характером</div>
-        <button class="more__active-button button">Подробнее</button>
-      </div>
-      <div class="offers">
-        <h2 class="offers__title">Лучшие предложения банка</h2>
-        <ul class="offers__list">
-          <li class="offers__item">
-            <!--СОМНЕНИЯ: правильно ли тут использую БЭМ-->
-            <img src="images/icons/cards/card_grey.png" alt="Карта «Базовая»" class="offers__item-image">
-            <h3 class="offers__item-title">Карта «Базовая»</h3>
-            <!--СОМНЕНИЯ: можно ли тут выделить 2 отдельных блока-->
-            <div class="service">
-              <div class="service__price">60 Р.-</div>
-              <div class="service__title">Обслуживание карты</div>
-            </div>
-            <div class="cashback">
-              <div class="cashback__procent">до 4%</div>
-              <div class="cashback__title">Кэшбек за любые покупки</div>
-            </div>
-            <button class="offers__button button">Подробнее</button>
-          </li>
-          <li class="offers__active-item">
-            <!--СОМНЕНИЯ-->
-            <img src="images/icons/cards/card_blue.png" alt="Карта «Оптима»" class="offers__item-image">
-            <h3 class="offers__item-title">Карта «Оптима»</h3>
-            <!--СОМНЕНИЯ-->
-            <div class="service">
-              <div class="service__price">90 Р.-</div>
-              <div class="service__title">Обслуживание карты</div>
-            </div>
-            <div class="cashback">
-              <div class="cashback__procent">до 5%</div>
-              <div class="cashback__title">Кэшбек за любые покупки</div>
-            </div>
-            <button class="offers__active-button button">Подробнее</button>
-          </li>
-          <li class="offers__item">
-            <!--СОМНЕНИЯ-->
-            <img src="images/icons/cards/card_gold.png" alt="Карта «Платинум»" class="offers__item-image">
-            <h3 class="offers__item-title">Карта «Платинум»</h3>
-            <!--СОМНЕНИЯ-->
-            <div class="service">
-              <div class="service__price">490 Р.-</div>
-              <div class="service__title">Обслуживание карты</div>
-            </div>
-            <div class="cashback">
-              <div class="cashback__procent">до 6%</div>
-              <div class="cashback__title">Кэшбек за любые покупки</div>
-            </div>
-            <button class="offers__button button">Подробнее</button>
-          </li>
-        </ul>
-      </div>
-      <div class="news">
-        <h2 class="news__title">Новости и акции</h2>
-        <ul class="news__list">
-          <li class="news__item">
-            <!--Картинка ниже, наверное, бэкграунд-->
-            <img src="/images/content/news/phone.jpg" alt="Телефон" class="news__item-image">
-            <div class="news__item-date">ноябрь 2019</div>
-            <h3 class="news__item-name">Удобное мобильное приложение</h3>
-            <p class="news__item-description">Хороший банк, хорошие условия</p>
-          </li>
-          <li class="news__item">
-            <!--Картинка ниже, наверное, бэкграунд-->
-            <img src="/images/content/news/mountains.jpg" alt="Горы" class="news__item-image">
-            <div class="news__item-date">ноябрь 2019</div>
-            <h3 class="news__item-name">Копите на поездку? Откройте счёт!</h3>
-            <p class="news__item-description">Хороший банк, хорошие условия. Откладывайте деньги! Наш банк самый лучший банк в мире!</p>
-          </li>
-        </ul>
-        <div class="paginator">
-          <div class="paginator__display">Страница 1 из 7</div>
-          <ul class="paginator__list">
-            <li class="paginator__active-item">
-              <!--СОМНЕНИЯ: где устанавливать активный класс-->
-              <a href="#" class="paginator__active-link">1</a>
+      <section class="more">
+        <div class="container">
+          <h1 class="more__title">Не отказывай себе в желании быть первым</h1>
+          <div class="more__description">Банк с львиным характером</div>
+          <button class="more__active-button button">Подробнее</button>
+        </div>
+      </section>
+      <section class="offers">
+        <div class="container">
+          <h2 class="offers__title">Лучшие предложения банка</h2>
+          <ul class="offers__list">
+            <li class="offers__item">
+              <!--СОМНЕНИЯ: правильно ли тут использую БЭМ-->
+              <img src="images/icons/cards/card_grey.png" alt="Карта «Базовая»" class="offers__item-image">
+              <h3 class="offers__item-title">Карта «Базовая»</h3>
+              <!--СОМНЕНИЯ: можно ли тут выделить 2 отдельных блока-->
+              <div class="service">
+                <div class="service__price">60 Р.-</div>
+                <div class="service__title">Обслуживание карты</div>
+              </div>
+              <div class="cashback">
+                <div class="cashback__procent">до 4%</div>
+                <div class="cashback__title">Кэшбек за любые покупки</div>
+              </div>
+              <button class="offers__button button">Подробнее</button>
             </li>
-            <li class="paginator__item">
-              <a href="#" class="paginator__link">2</a>
+            <li class="offers__active-item">
+              <!--СОМНЕНИЯ-->
+              <img src="images/icons/cards/card_blue.png" alt="Карта «Оптима»" class="offers__item-image">
+              <h3 class="offers__item-title">Карта «Оптима»</h3>
+              <!--СОМНЕНИЯ-->
+              <div class="service">
+                <div class="service__price">90 Р.-</div>
+                <div class="service__title">Обслуживание карты</div>
+              </div>
+              <div class="cashback">
+                <div class="cashback__procent">до 5%</div>
+                <div class="cashback__title">Кэшбек за любые покупки</div>
+              </div>
+              <button class="offers__active-button button">Подробнее</button>
             </li>
-            <li class="paginator__item">
-              <a href="#" class="paginator__link">3</a>
-            </li>
-            <li class="paginator__item">
-              <a href="#" class="paginator__link">4</a>
-            </li>
-            <li class="paginator__item">
-              <a href="#" class="paginator__link">5</a>
-            </li>
-            <li class="paginator__item">
-              <a href="#" class="paginator__link">6</a>
-            </li>
-            <li class="paginator__item">
-              <a href="#" class="paginator__link">7</a>
+            <li class="offers__item">
+              <!--СОМНЕНИЯ-->
+              <img src="images/icons/cards/card_gold.png" alt="Карта «Платинум»" class="offers__item-image">
+              <h3 class="offers__item-title">Карта «Платинум»</h3>
+              <!--СОМНЕНИЯ-->
+              <div class="service">
+                <div class="service__price">490 Р.-</div>
+                <div class="service__title">Обслуживание карты</div>
+              </div>
+              <div class="cashback">
+                <div class="cashback__procent">до 6%</div>
+                <div class="cashback__title">Кэшбек за любые покупки</div>
+              </div>
+              <button class="offers__button button">Подробнее</button>
             </li>
           </ul>
         </div>
-      </div>
-      <div class="about">
-        <!--Картинка ниже, наверное, бэкграунд-->
-        <img src="images/decor/chess.jpg" alt="Шахматы" class="about__image">
-        <h2 class="about__title">О банке</h2>
-        <p class="about__description">
-          Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее
-          осмысленного текста рыбы на русском языке,
-          а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы
-          использовали небезизвестный универсальный код речей.
-        </p>
-        <button class="about__active-button button">Подробнее</button>
-      </div>
+      </section>
+      <section class="news">
+        <div class="container">
+          <h2 class="news__title">Новости и акции</h2>
+          <ul class="news__list">
+            <li class="news__item">
+              <!--Картинка ниже, наверное, бэкграунд-->
+              <img src="/images/content/news/phone.jpg" alt="Телефон" class="news__item-image">
+              <div class="news__item-date">ноябрь 2019</div>
+              <h3 class="news__item-name">Удобное мобильное приложение</h3>
+              <p class="news__item-description">Хороший банк, хорошие условия</p>
+            </li>
+            <li class="news__item">
+              <!--Картинка ниже, наверное, бэкграунд-->
+              <img src="/images/content/news/mountains.jpg" alt="Горы" class="news__item-image">
+              <div class="news__item-date">ноябрь 2019</div>
+              <h3 class="news__item-name">Копите на поездку? Откройте счёт!</h3>
+              <p class="news__item-description">Хороший банк, хорошие условия. Откладывайте деньги! Наш банк самый лучший банк в мире!</p>
+            </li>
+          </ul>
+          <div class="paginator">
+            <div class="paginator__display">Страница 1 из 7</div>
+            <ul class="paginator__list">
+              <li class="paginator__active-item">
+                <!--СОМНЕНИЯ: где устанавливать активный класс-->
+                <a href="#" class="paginator__active-link">1</a>
+              </li>
+              <li class="paginator__item">
+                <a href="#" class="paginator__link">2</a>
+              </li>
+              <li class="paginator__item">
+                <a href="#" class="paginator__link">3</a>
+              </li>
+              <li class="paginator__item">
+                <a href="#" class="paginator__link">4</a>
+              </li>
+              <li class="paginator__item">
+                <a href="#" class="paginator__link">5</a>
+              </li>
+              <li class="paginator__item">
+                <a href="#" class="paginator__link">6</a>
+              </li>
+              <li class="paginator__item">
+                <a href="#" class="paginator__link">7</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <section class="about">
+        <div class="container">
+          <!--Картинка ниже, наверное, бэкграунд-->
+          <img src="images/decor/chess.jpg" alt="Шахматы" class="about__image">
+          <h2 class="about__title">О банке</h2>
+          <p class="about__description">
+            Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее
+            осмысленного текста рыбы на русском языке,
+            а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы
+            использовали небезизвестный универсальный код речей.
+          </p>
+          <button class="about__active-button button">Подробнее</button>
+        </div>
+      </section>
     </div>
 
     <footer class="footer">
-      <a href="/" class="logo">
-        <img src="images/logo.png" alt="Логотип" class="logo__pic">
-        <h3 class="logo__title">Lion Bank</h3>
-      </a>
-      <nav class="menu">
-        <ul class="menu__list">
-          <li class="menu__item">
-            <a href="#" class="menu__link">Главная</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">Услуги</a>
-          </li>
-          <li class="menu__item">
-            <a href="#" class="menu__link">Отзывы</a>
-          </li>
-        </ul>
-      </nav>
-      <div class="socials">
-        <ul class="socials__list">
-          <!--Ожидаю, что иконки соцсетей опишем в css, пока оставила такую разметку-->
-          <li class="socials__item">
-            <a href="#" class="socials__link"><img src="images/icons/socials/telegram.png" alt="Telegram" class="socials__image"></a>
-          </li>
-          <li class="socials__item">
-            <a href="#" class="socials__link"><img src="images/icons/socials/vk.png" alt="VKontakte" class="socials__image"></a>
-          </li>
-          <li class="socials__active-item">
-            <!--СОМНЕНИЯ: где устанавливать активный класс-->
-            <a href="#" class="socials__active-link"><img src="images/icons/socials/facebook-hover.png" alt="Facebook" class="socials__image"></a>
-          </li>
-          <li class="socials__item">
-            <a href="#" class="socials__link"><img src="images/icons/socials/instagram.png" alt="Instagram" class="socials__image"></a>
-          </li>
-        </ul>
+      <div class="container">
+        <a href="/" class="logo">
+          <img src="images/logo.png" alt="Логотип" class="logo__pic">
+          <h3 class="logo__title">Lion Bank</h3>
+        </a>
+        <nav class="menu">
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a href="#" class="menu__link">Главная</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">Услуги</a>
+            </li>
+            <li class="menu__item">
+              <a href="#" class="menu__link">Отзывы</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="socials">
+          <ul class="socials__list">
+            <!--Ожидаю, что иконки соцсетей опишем в css, пока оставила такую разметку-->
+            <li class="socials__item">
+              <a href="#" class="socials__link"><img src="images/icons/socials/telegram.png" alt="Telegram" class="socials__image"></a>
+            </li>
+            <li class="socials__item">
+              <a href="#" class="socials__link"><img src="images/icons/socials/vk.png" alt="VKontakte" class="socials__image"></a>
+            </li>
+            <li class="socials__active-item">
+              <!--СОМНЕНИЯ: где устанавливать активный класс-->
+              <a href="#" class="socials__active-link"><img src="images/icons/socials/facebook-hover.png" alt="Facebook" class="socials__image"></a>
+            </li>
+            <li class="socials__item">
+              <a href="#" class="socials__link"><img src="images/icons/socials/instagram.png" alt="Instagram" class="socials__image"></a>
+            </li>
+          </ul>
+        </div>
+        <address class="contacts">
+          <div class="contacts__title">Бесплатный звонок по России</div>
+          <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
+        </address>
       </div>
-      <address class="contacts">
-        <div class="contacts__title">Бесплатный звонок по России</div>
-        <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
-      </address>
     </footer>
   </div>
 </body>
