Лого - картинка. Шрифт Montserrat не нужен

--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
      <div class="container">
         <a href="/" class="logo">
           <img src="images/logo.png" alt="Логотип" class="logo__pic">
-          <h3 class="logo__title">Lion Bank</h3>
         </a>
         <nav class="menu">
-          <ul class="menu__list">
+          <ul class="menu__list"> <!-- menu-list, а потом menu-list__item? -->
             <li class="menu__item">
               <a href="#" class="menu__link">Главная</a>
             </li>
@@ -165,7 +164,6 @@
       <div class="container">
         <a href="/" class="logo">
           <img src="images/logo.png" alt="Логотип" class="logo__pic">
-          <h3 class="logo__title">Lion Bank</h3>
         </a>
         <nav class="menu">
           <ul class="menu__list">
