--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
   <title>Lion Bank - Главная</title>
 </head>
 
@@ -21,8 +21,7 @@
               <li class="menu__item">
                 <a href="#" class="menu__link">Главная</a>
               </li>
-              <li class="menu__item">
-                <!--СОМНЕНИЯ: где устанавливать активный класс-->
+              <li class="menu__item menu__item_active"> <!--модификатор-->
                 <a href="#" class="menu__link">Услуги</a>
               </li>
               <li class="menu__item">
