Стили для offers

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
         <h2 class="section__title">Лучшие предложения банка</h2>
         <ul class="offers">
           <li class="offers__item">
-            <div class="offers__header"></div>
+            <div class="offers__header">
+              <img src="./images/icons/cards/card_grey.png" alt="grey card" class="offers__header-img">
+            </div>
             <div class="offers__content">
               <h3 class="offers__title">Карта «Базовая»</h3>
               <div class="offers__prices">
@@ -63,11 +65,15 @@
                   <div class="offers__price-desc">Кэшбек за любые покупки</div>
                 </div>
               </div>
-              <a class="button">Подробнее</a>
+              <div class="offers__btn-wrapper">
+                <a class="button">Подробнее</a>
+              </div>
             </div>
           </li>
           <li class="offers__item">
-            <div class="offers__header"></div>
+            <div class="offers__header">
+              <img src="./images/icons/cards/card_blue.png" alt="blue card" class="offers__header-img">
+            </div>
             <div class="offers__content">
               <h3 class="offers__title">Карта «Оптима»</h3>
               <div class="offers__prices">
@@ -80,11 +86,15 @@
                   <div class="offers__price-desc">Кэшбек за любые покупки</div>
                 </div>
               </div>
-              <a class="button">Подробнее</a>
+              <div class="offers__btn-wrapper">
+                <a class="button">Подробнее</a>
+              </div>
             </div>
           </li>
           <li class="offers__item">
-            <div class="offers__header"></div>
+            <div class="offers__header">
+              <img src="./images/icons/cards/card_gold.png" alt="gold card" class="offers__header-img">
+            </div>
             <div class="offers__content">
               <h3 class="offers__title">Карта «Платинум»</h3>
               <div class="offers__prices">
@@ -97,13 +107,15 @@
                   <div class="offers__price-desc">Кэшбек за любые покупки</div>
                 </div>
               </div>
-              <a class="button">Подробнее</a>
+              <div class="offers__btn-wrapper">
+                <a class="button">Подробнее</a>
+              </div>
             </div>
           </li>
-
         </ul>
       </div>
     </section>
+
     <section class="news">
       <div class="container">
         <h2 class="news__title">Новости и акции</h2>
