button -> btn для краткости

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <div class="hero__text-section">
             <h1 class="hero__title">Не отказывай себе в желании быть первым</h1>
             <h4 class="hero__subtitle">Банк с львиным характером</h4>
-            <a class="button">Подробнее</a>
+            <a class="btn">Подробнее</a>
           </div>
         </div>
       </div>
@@ -66,7 +66,7 @@
                 </div>
               </div>
               <div class="offers__btn-wrapper">
-                <a class="button">Подробнее</a>
+                <a class="btn">Подробнее</a>
               </div>
             </div>
           </li>
@@ -87,7 +87,7 @@
                 </div>
               </div>
               <div class="offers__btn-wrapper">
-                <a class="button">Подробнее</a>
+                <a class="btn">Подробнее</a>
               </div>
             </div>
           </li>
@@ -108,7 +108,7 @@
                 </div>
               </div>
               <div class="offers__btn-wrapper">
-                <a class="button">Подробнее</a>
+                <a class="btn">Подробнее</a>
               </div>
             </div>
           </li>
@@ -178,7 +178,7 @@
             а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы
             использовали небезизвестный универсальный код речей.
           </p>
-          <button class="about__active-button button">Подробнее</button>
+          <btn class="about__active-btn btn">Подробнее</btn>
         </div>
       </div>
     </section>
