--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <div class="hero__text-section">
             <h1 class="hero__title">Не отказывай себе в желании быть первым</h1>
             <h4 class="hero__subtitle">Банк с львиным характером</h4>
-            <a class="btn">Подробнее</a>
+            <a class="btn btn_color_ginger">Подробнее</a> <!--модификатор ключ-значение-->
           </div>
         </div>
       </div>
@@ -49,7 +49,7 @@
       <div class="container">
         <h2 class="section__title">Лучшие предложения банка</h2>
         <ul class="offers">
-          <li class="offers__item">
+          <li class="offers__item offers__item_theme_grey"> <!--модификатор ключ-значение-->
             <div class="offers__header">
               <img src="./images/icons/cards/card_grey.png" alt="grey card" class="offers__header-img">
             </div>
@@ -66,11 +66,11 @@
                 </div>
               </div>
               <div class="offers__btn-wrapper">
-                <a class="btn">Подробнее</a>
+                <a class="btn btn_color_black">Подробнее</a> <!--модификатор ключ-значение-->
               </div>
             </div>
           </li>
-          <li class="offers__item">
+          <li class="offers__item offers__item_theme_blue"> <!--модификатор ключ-значение-->
             <div class="offers__header">
               <img src="./images/icons/cards/card_blue.png" alt="blue card" class="offers__header-img">
             </div>
@@ -87,11 +87,11 @@
                 </div>
               </div>
               <div class="offers__btn-wrapper">
-                <a class="btn">Подробнее</a>
+                <a class="btn btn_color_black">Подробнее</a> <!--модификатор ключ-значение-->
               </div>
             </div>
           </li>
-          <li class="offers__item">
+          <li class="offers__item offers__item_theme_gold"> <!--модификатор ключ-значение-->
             <div class="offers__header">
               <img src="./images/icons/cards/card_gold.png" alt="gold card" class="offers__header-img">
             </div>
@@ -108,7 +108,7 @@
                 </div>
               </div>
               <div class="offers__btn-wrapper">
-                <a class="btn">Подробнее</a>
+                <a class="btn btn_color_black">Подробнее</a> <!--модификатор ключ-значение-->
               </div>
             </div>
           </li>
