Стили offers (PP)

--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
                   <div class="offers__price-desc">Обслуживание карты</div>
                 </div>
                 <div class="offers__prices-cell">
-                  <div class="offers__price">до 4%</div>
+                  <div class="offers__price">
+                    <!--для того, чтобы сделать "до" меньше-->
+                    <span class="offers__price-range">до</span> 4%
+                  </div>
                   <div class="offers__price-desc">Кэшбек за любые покупки</div>
                 </div>
               </div>
@@ -82,7 +85,10 @@
                   <div class="offers__price-desc">Обслуживание карты</div>
                 </div>
                 <div class="offers__prices-cell">
-                  <div class="offers__price">до 5%</div>
+                  <div class="offers__price">
+                    <!--для того, чтобы сделать "до" меньше-->
+                    <span class="offers__price-range">до</span> 5%
+                  </div>
                   <div class="offers__price-desc">Кэшбек за любые покупки</div>
                 </div>
               </div>
@@ -103,7 +109,10 @@
                   <div class="offers__price-desc">Обслуживание карты</div>
                 </div>
                 <div class="offers__prices-cell">
-                  <div class="offers__price">до 6%</div>
+                  <div class="offers__price">
+                    <!--для того, чтобы сделать "до" меньше-->
+                    <span class="offers__price-range">до</span> 6%
+                  </div>
                   <div class="offers__price-desc">Кэшбек за любые покупки</div>
                 </div>
               </div>
