Правка разметки. News

--- a/index.html
+++ b/index.html
@@ -125,24 +125,27 @@
       </div>
     </section>
 
-    <section class="news">
+    <section class="section">
       <div class="container">
-        <h2 class="news__title">Новости и акции</h2>
-        <ul class="news__list">
+        <h2 class="section__title">Новости и акции</h2>
+        <ul class="news">
           <li class="news__item">
             <!--Картинка ниже, наверное, бэкграунд-->
-            <!-- <img src="/images/content/news/phone.jpg" alt="Телефон" class="news__item-image"> -->
-            <div class="news__item-date">ноябрь 2019</div>
-            <h3 class="news__item-name">Удобное мобильное приложение</h3>
-            <p class="news__item-description">Хороший банк, хорошие условия</p>
+            <img src="./images/content/news/phone.jpg" alt="Мобильное приложение" class="news__image">
+            <div class="news__text-content">
+              <time class="news__date">ноябрь 2019</time>
+              <h3 class="news__title">Удобное мобильное приложение</h3>
+              <p class="news__desc">Хороший банк, хорошие условия</p>
+            </div>
           </li>
           <li class="news__item">
             <!--Картинка ниже, наверное, бэкграунд-->
-            <!-- <img src="/images/content/news/mountains.jpg" alt="Горы" class="news__item-image"> -->
-            <div class="news__item-date">ноябрь 2019</div>
-            <h3 class="news__item-name">Копите на поездку? Откройте счёт!</h3>
-            <p class="news__item-description">Хороший банк, хорошие условия. Откладывайте деньги! Наш банк самый
-              лучший банк в мире!</p>
+            <img src="./images/content/news/mountains.jpg" alt="Горы" class="news__image">
+            <div class="news__text-content">
+              <time class="news__date">ноябрь 2019</time>
+              <h3 class="news__title">Копите на поездку? Откройте счёт!</h3>
+              <p class="news__desc">Хороший банк, хорошие условия. Откладывайте деньги! Наш банк самый лучший банк в мире!</p>
+            </div>
           </li>
         </ul>
         <div class="paginator">
