--- a/index.html
+++ b/index.html
@@ -151,9 +151,8 @@
         <div class="paginator">
           <div class="paginator__display">Страница 1 из 7</div>
           <ul class="paginator__list">
-            <li class="paginator__active-item">
-              <!--СОМНЕНИЯ: где устанавливать активный класс-->
-              <a href="#" class="paginator__active-link">1</a>
+            <li class="paginator__item paginator__item_active"> <!--модификатор-->
+              <a href="#" class="paginator__link">1</a>
             </li>
             <li class="paginator__item">
               <a href="#" class="paginator__link">2</a>
