--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
             <img src="./images/content/news/phone.jpg" alt="Мобильное приложение" class="news__image">
             <div class="news__text-content">
               <time class="news__date">ноябрь 2019</time>
-              <h3 class="news__title">Удобное мобильное приложение</h3>
-              <p class="news__desc">Хороший банк, хорошие условия</p>
+              <div class="news__title">Удобное мобильное приложение</div>
+              <div class="news__desc">Хороший банк, хорошие условия</div>
             </div>
           </li>
           <li class="news__item">
@@ -143,8 +143,8 @@
             <img src="./images/content/news/mountains.jpg" alt="Горы" class="news__image">
             <div class="news__text-content">
               <time class="news__date">ноябрь 2019</time>
-              <h3 class="news__title">Копите на поездку? Откройте счёт!</h3>
-              <p class="news__desc">Хороший банк, хорошие условия. Откладывайте деньги! Наш банк самый лучший банк в мире!</p>
+              <div class="news__title">Копите на поездку? Откройте счёт!</div>
+              <div class="news__desc">Хороший банк, хорошие условия. Откладывайте деньги! Наш банк самый лучший банк в мире!</div>
             </div>
           </li>
         </ul>
