Правки разметки About

--- a/index.html
+++ b/index.html
@@ -176,20 +176,21 @@
         </div>
       </div>
     </section>
-    <section class="about">
+
+    <section class="section">
       <div class="container">
-        <!--Картинка ниже, наверное, бэкграунд-->
-        <img src="images/decor/chess.jpg" alt="Шахматы" class="about__image">
-        <div class="about-container">
-          <!--сомнительно-->
-          <h2 class="about__title">О банке</h2>
-          <p class="about__description">
-            Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее
-            осмысленного текста рыбы на русском языке,
-            а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы
-            использовали небезизвестный универсальный код речей.
-          </p>
-          <btn class="about__active-btn btn">Подробнее</btn>
+        <div class="about">
+            <h2 class="about__title">О банке</h2>
+            <div class="about__desc-text">
+              <p> <!--так верстают, когда есть многострочный текст, есть обертка, нет класса у p-->
+                Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее
+                осмысленного текста рыбы на русском языке,
+                а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы
+                использовали небезизвестный универсальный код речей.
+              </p>
+            </div>
+            <btn class="btn btn_color_ginger">Подробнее</btn>
+          </div>
         </div>
       </div>
     </section>
