Социалки перенесены в разметку

--- a/index.html
+++ b/index.html
@@ -217,17 +217,25 @@
             </ul>
           </nav>
           <ul class="socials">
-            <li class="socials__item socials__item_icon_telegram"> <!--модификатор ключ-значение-->
-              <a href="#" class="socials__link"></a>
+            <li class="socials__item"> 
+              <a href="#" class="socials__link">
+                <img src="./images/icons/socials/telegram-hover.png" alt="telegram icon" class="socials__icon">
+              </a>
             </li>
-            <li class="socials__item socials__item_icon_vk"> <!--модификатор ключ-значение-->
-              <a href="#" class="socials__link"></a>
+            <li class="socials__item"> 
+              <a href="#" class="socials__link">
+                <img src="./images/icons/socials/vk-hover.png" alt="vkontakte icon" class="socials__icon">
+              </a>
             </li>
-            <li class="socials__item socials__item_icon_fb"> <!--модификатор ключ-значение-->
-              <a href="#" class="socials__link"></a>
+            <li class="socials__item"> 
+              <a href="#" class="socials__link">
+                <img src="./images/icons/socials/facebook-hover.png" alt="facebook icon" class="socials__icon">
+              </a>
             </li>
-            <li class="socials__item socials__item_icon_insta"> <!--модификатор ключ-значение-->
-              <a href="#" class="socials__link"></a>
+            <li class="socials__item"> 
+              <a href="#" class="socials__link">
+                <img src="./images/icons/socials/instagram-hover.png" alt="instagram icon" class="socials__icon">
+              </a>
             </li>
           </ul>
           <address class="contacts">
