--- a/service.html
+++ b/service.html
@@ -42,7 +42,7 @@
             <div class="hero__content">
               <h1 class="hero__title">Услуги</h1>                     
             </div>
-            <div class="breadcrumbs">
+            <nav class="breadcrumbs">
               <ul class="breadcrumbs__list">
                 <li class="breadcrumbs__item">
                   <a href="./index.html" class="breadcrumbs__link">Главная</a>
@@ -51,7 +51,7 @@
                   <a href="./service.html" class="breadcrumbs__link">Услуги</a>
                 </li>
               </ul>
-            </div>
+            </nav>
           </div>
         </section>
         
