--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <nav class="menu">
               <ul class="menu__list">
                 <li class="menu__item">
-                  <a href="#" class="menu__link">Главная</a>
+                  <a href="/" class="menu__link">Главная</a>
                 </li>
                 <li class="menu__item menu__item_active"> <!--модификатор-->                
                   <a href="./service.html" class="menu__link">Услуги</a>
@@ -208,7 +208,7 @@
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__item">
-                <a href="./index.html" class="menu__link">Главная</a>
+                <a href="/" class="menu__link">Главная</a>
               </li>
               <li class="menu__item">
                 <a href="./service.html" class="menu__link">Услуги</a>
