--- a/service.html
+++ b/service.html
@@ -20,10 +20,10 @@
                 <nav class="menu">
                   <ul class="menu__list">
                     <li class="menu__item">
-                      <a href="#" class="menu__link">Главная</a>
+                      <a href="/" class="menu__link">Главная</a>
                     </li>
                     <li class="menu__item menu__item_active"> <!--модификатор-->                
-                      <a href="#" class="menu__link">Услуги</a>
+                      <a href="./service.html" class="menu__link">Услуги</a>
                     </li>
                     <li class="menu__item">
                       <a href="#" class="menu__link">Отзывы</a>
@@ -46,7 +46,7 @@
               <nav class="breadcrumbs">
                 <ul class="breadcrumbs__list">
                   <li class="breadcrumbs__item">
-                    <a href="./index.html" class="breadcrumbs__link">Главная</a>
+                    <a href="/" class="breadcrumbs__link">Главная</a>
                   </li>
                   <li class="breadcrumbs__item">
                     <a href="./service.html" class="breadcrumbs__link">Услуги</a>
@@ -178,7 +178,7 @@
             <nav class="menu">
               <ul class="menu__list">
                 <li class="menu__item">
-                  <a href="./index.html" class="menu__link">Главная</a>
+                  <a href="/" class="menu__link">Главная</a>
                 </li>
                 <li class="menu__item">
                   <a href="./service.html" class="menu__link">Услуги</a>
